@@ -804,13 +804,18 @@ function _generate_debug_output() {
 		
         if ($resource_type == 'file') {
             $readable = false;
-            $include_paths = preg_split('![:;]!', ini_get('include_path'));
-            foreach ($include_paths as $path) {
-                if (@is_file($path . DIRECTORY_SEPARATOR . $resource_name)) {
-                    $readable = true;
-                    break;
-                }
-            }
+			if(@is_file($resource_name)) {
+				$readable = true;
+			} else {
+				// test for file in include_path
+            	$include_paths = preg_split('![:;]!', ini_get('include_path'));
+            	foreach ($include_paths as $path) {
+                	if (@is_file($path . DIRECTORY_SEPARATOR . $resource_name)) {
+                    	$readable = true;
+                    	break;
+                	}
+            	}
+			}
         } else if ($resource_type != 'file') {
             $readable = true;
             $resource_func = $this->_plugins['resource'][$resource_type][0][0];
